# bump

./: Cargo.toml  README.md
.github/workflows/: build-and-publish.yml
docs/: CONFIGURATION.md  CONTRIBUTING.md  WORKFLOW.md
install/: get_bump.ps1  get_bump.sh
src/: bump.rs  bumpfile.rs  cli.rs  compose.rs  lang.rs  main.rs  print.rs  version.rs
src/bump/: emit.rs  init.rs  meta.rs  mutate.rs  show.rs  tag.rs  update.rs
src/cmd/: emit.rs  init.rs  meta.rs  mod.rs  mutate.rs  show.rs  tag.rs  update.rs
src/output/: mod.rs
src/output/format/: c.rs  c_header.rs  csharp.rs  go.rs  java.rs  json.rs  mod.rs  python.rs  raw.rs  toml.rs  yaml.rs
src/templates/: bump.toml
src/templates/c/: calver.h  semver.h
src/templates/csharp/: calver.cs  semver.cs
src/templates/go/: calver.go  semver.go
src/templates/java/: calver.java  semver.java
src/templates/python/: calver.py  semver.py
tests/: cli.sh  completion.sh  emit.sh  init.sh  lib.sh  malformed.sh  meta.sh  mode-swap.sh  mutate.sh  output.sh  print.sh  run.sh  schema.sh  show.sh  tag.sh  update.sh
tests/fixtures/mode-swap/: calver-mode-semver-keys.toml  calver-mode-year-only.toml
